--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -11,5 +11,8 @@ html(lang="en")
             h1 Noom
         main
             h2 Welcome to Noom
-            button hi
+            ul
+            form
+                input(type='text', placeholder='Write a message', required)
+                button Send  
         script(src="/public/js/app.js")
