feat: show nickname and message

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -11,8 +11,11 @@ html(lang="en")
             h1 Noom
         main
             h2 Welcome to Noom
+            form#nickname
+                input(type='text', placeholder='choose a nickname', required)
+                button Save 
             ul
-            form
+            form#message
                 input(type='text', placeholder='Write a message', required)
                 button Send  
         script(src="/public/js/app.js")
