feat: send messages with username

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -12,7 +12,7 @@ html(lang="en")
         main
             h2 Welcome to Noom
             form#nickname
-                input(type='text', placeholder='choose a nickname', required)
+                input(type='text', placeholder='Choose a nickname', required)
                 button Save 
             ul
             form#message
