--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,12 +10,9 @@ html(lang="en")
         header
             h1 Noom
         main
-            h2 Welcome to Noom
-            form#nickname
-                input(type='text', placeholder='Choose a nickname', required)
-                button Save 
-            ul
-            form#message
-                input(type='text', placeholder='Write a message', required)
-                button Send  
+            div#welcome
+                form
+                    input(placeholder='room name',required,type='text')
+                    button Enter Room 
+        script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
