--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -13,7 +13,9 @@ html(lang="en")
             div#welcome
                 form
                     input(placeholder='room name',required,type='text')
-                    button Enter Room 
+                    button Enter Room
+                h4 Open Rooms:
+                ul
             #room
                 h3
                 ul
