--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,10 +10,16 @@ html(lang="en")
         header
             h1 Noom
         main
-            div#myStream
+            div#welcome
+                form
+                    input(placeholder='Room Name', required, type='text')
+                    button Enter Room
+            div#call
+                div#myStream
                 video#myFace(autoplay, playsinline, muted, width="400", height="400")
                 button#mute Unmute
                 button#camera Turn Camera Off
                 select#cameras
+
         script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
